Added: Starting player is randomized, clicking cells switches players & assigns appropriate marker

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,13 @@ h1 {
 
 /* Game board */
 
+div[quadrant] {
+    font-size: 7em;
+    text-align: center;
+    align-content: center;
+    line-height: 166.6px;
+}
+
 div[quadrant="0"],
 div[quadrant="1"],
 div[quadrant="3"],
